creating ChangeLog
2002-11-15 Doug Daniels/Brent Hendricks

	* cong-primary-window.c

	Save confirmation alert
	
2002-11-14 David Malcolm

	* cong-primary-window.c, global.h, main.c

	More test menu items

	* cong-tree-view.c, dispspec.c, position.c, xmledit.c, xmlview.c

	Optimisations
	
2002-11-14 Doug Daniels/Brent Hendricks

	* cong-document.c, cong-primary-window.c, save.c, global.h

	Fixes for "File->Save As" and "File->Save"
	
2002-11-14 Geert Stappers

	* cong-primary-window.c
	
	Version support in "About" dialog
	
2002-11-13 David Malcolm

	* fo-parser-result.c, fo-print-context.c, fo-rect.c, fo-solver-result.c, fo-tests.c, fo.h

	Further fo work
	
        * cong-primary-window.c, global.h, main.c, xmldata.c

	Added some tests plus a File->Properties implementation 

	* popup.c, tree.c

	Enhancements to the context menu
	
	* Makefile.am

	Added cong-dialog.c and the fo files	

	* cong-dialog.c

	Initial import
	
2002-11-10 David Malcolm

	* fo.h, fo-parser-result.c, fo-print-context.c, fo-rect.c, fo-solver-result.c, fo-tests.c 

	Fleshing out XSL:FO code
	
2002-11-09 David Malcolm

	* fo.h, fo-parser-result.c, fo-print-context.c, fo-rect.c, fo-solver-result.c, fo-tests.c 

	Initial import
	
2002-11-07 David Malcolm

	* cong-document.c, cong-primary-window.c, global.h, main.c, open.c, save.c

	XSLT experiments and Open/Save cleanups

	* cong-document.c, cong-primary-window.c, cong-tree-view.c, cursor.c, global.h

	Document cleanups and "(modified)" hint in window title.

	* xmlview.c

	More cleanups
	
2002-11-06 David Malcolm

	* cong-error-file-save.c, global.h, main.c, open.c

	Transformation tests

	* cong-primary-window.c, popup.c, xmledit.c

	Menu cleanups
	
2002-11-04 David Malcolm

	* cong-document.c, cong-font.c, cong-location.c, cong-test-view.c, cong-tree-view.c, cursor.c, global.h, open.c, popup.c, position.c, select.c, tests.c, tree.c, xmldata.c, xmledit.c, xmlload.c, xmlview.c
